--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,75 @@
 }
 
 *{
-    margin: 0;
-    padding: 0;
+    
 }
 
 body{
     background-color:var(--very-dark-blue);
     font-size: 15px;
     font-family: 'Overpass', sans-serif;
+    
+}
+main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    
+}
+.submit-section{
+    box-sizing: border-box;
+    padding: 25px;
+    border-radius: 20px;
+    background-color: var(--dark-blue);
+    max-width: 400px;
+    
+}
+.star{
+    background-color:var(--medium-grey);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+h2{
+    color:var(--white);
+}
 
+p{
+    color:var(--light-grey);
+}
+
+.ratings{
+    
+    color: var(--light-grey);
+    display: flex;
+    justify-content: space-between;
+}
+.rating{
+    background-color: var(--medium-grey);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    
+}
+
+
+button{
+    letter-spacing: 1px;
+    font-size: 16px;
+    margin-top: 20px;
+    background-color: var(--orange);
+    color:var(--white);
+    border:0;
+    width: 80%;
+    border-radius: 50px;
+    padding: 10px;
 }
