add thank-you section

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 :root{
     --orange:hsl(25, 97%, 53%);
     --white:hsl(0, 0%, 100%);
@@ -41,8 +42,17 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: 40s;
 }
+
+.star:hover{
+    transform: rotate(3600deg);
+    transition:40s;
+}
+
+
 h2{
+    font-size: 28px;
     color:var(--white);
 }
 
@@ -51,32 +61,83 @@ p{
 }
 
 .ratings{
-    
-    color: var(--light-grey);
     display: flex;
     justify-content: space-between;
 }
-.rating{
+.rating-button{
     background-color: var(--medium-grey);
+    color: var(--light-grey);
     width: 50px;
     height: 50px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 18px;
-    
+    font-size: 22px;
+    border: 0;
+    cursor: pointer;
+}
+
+.rating-button:hover{
+    background-color: var(--orange);
+    color: var(--white);
+    transition: 400ms;
+}
+
+.rating-button:focus{
+    background-color: var(--light-grey);
+    color: var(--white);
 }
 
 
-button{
+.submit-button{
+    cursor: pointer;
+    margin: 30px auto 0;
+    display: block;
     letter-spacing: 1px;
     font-size: 16px;
-    margin-top: 20px;
     background-color: var(--orange);
     color:var(--white);
     border:0;
     width: 80%;
     border-radius: 50px;
     padding: 10px;
+}
+
+.submit-button:hover{
+    background-color:var(--white);
+    color: var(--orange);
+    transition: 400ms;
+}
+
+.thank-you-section{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 40px 30px;
+    border-radius: 20px;
+    background-color: var(--dark-blue);
+    max-width: 400px;
+    text-align: center;
+}
+
+.thank-you-section img{
+    padding-bottom: 50px;
+}
+
+.rating-selected{
+    color: var(--orange);
+    background-color: var(--medium-grey);
+    border-radius: 20px;
+    padding: 5px;
+    text-align: center;
+    width: 50%;
+}
+
+.rating-selected p{
+    color: var(--orange);
+    padding: 0;
+    margin: 0;
 }
